# polynoia

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  build-desktop.ps1  conflict-closed-loop.html  conflict-internals.html  dev.ps1  install.ps1  mobile-chat-redesign.html  mobile-plan.html  package.json  pnpm-lock.yaml  rule.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/server/: polynoia.db.demo-backup  pyproject.toml
apps/server/polynoia/: __init__.py  __main__.py  _winloop.py  credentials.py  main.py  settings.py  skills.py  tool_policy.py
apps/server/polynoia/adapters/: __init__.py  _utils.py  base.py  claude_code.py  codex.py  opencode.py  pool.py
apps/server/polynoia/api/: CLAUDE.md  _fs_paths.py  agent_templates.py  contacts_routes.py  conversations_routes.py  event_log.py  execution.py  onboarding.py  pipelines.py  quality_routes.py  role_presets.py  routes.py  seed.py  terminal.py  workspace_files.py  workspaces_routes.py  ws_conv.py
apps/server/polynoia/cli/: __init__.py  __main__.py  chat.py  monitor.py
apps/server/polynoia/context/: __init__.py  _types.py  assembler.py  briefs.py  budget.py  group_members.py  history.py  identity.py  ledger.py  membership.py  orchestrator.py  shared.py  window.py
apps/server/polynoia/domain/: __init__.py  entities.py  messages.py
apps/server/polynoia/mcp/: __init__.py  __main__.py  server.py  tools.py
apps/server/polynoia/orchestrator/: __init__.py  runtime.py
apps/server/polynoia/runners/: __init__.py  detector.py  docker_runner.py
apps/server/polynoia/sandbox/: CLAUDE.md  __init__.py  _core.py
apps/server/polynoia/storage/: __init__.py  bootstrap.py  db.py  models.py  repo.py
apps/server/polynoia/transport/: __init__.py  adapter_to_chunk.py  ui_message_chunk.py
apps/server/tests/: conftest.py  test_credentials.py  test_skills.py  test_tool_policy.py
apps/server/tests/adapters/: conftest.py  (+11 more)
(+451 files in other folders)
