[project]
name = "polynoia-server"
version = "0.1.0"
description = "Polynoia multi-agent collaboration platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "litellm>=1.52.0",
    "anthropic>=0.39.0",
    "claude-agent-sdk>=0.2.0",
    "openai>=1.54.0",
    "websockets>=13.1",
    "python-ulid>=3.0.0",
    "orjson>=3.10.11",
    "httpx>=0.27.2",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "datamodel-code-generator>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polynoia"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # 行长由 black-equivalent ruff format 管

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that hit live LLM backends (deselect with '-m \"not slow\"'); auto-skipped unless POLYNOIA_RUN_SLOW_INTEGRATION=1",
]
