[package]
name = "polynoia-desktop"
version = "0.1.1"
description = "Polynoia desktop app (macOS / Windows / Linux) — Tauri 2 wrapper around the Polynoia web build."
authors = ["Polynoia Team"]
edition = "2021"

# Tauri 2 binary entry. Both `cargo run` (dev) and `cargo tauri build` use this.
[[bin]]
name = "polynoia-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
